# BME-MODES3

./: .gitattributes  .gitignore  .project  .travis.yml  README.md  pom.xml  pom.xml~
bp2uppaal/: README.md
marker-detector/: CMakeLists.txt
marker-detector/calib/: camera_data.xml
marker-detector/cpu/src/: Board.cpp  Board.hpp  ConvolutionFilter.cpp  ConvolutionFilter.hpp  DataSerializer.cpp  DataSerializer.hpp  Filter.hpp  InputFilter.hpp  Main.cpp  Train.hpp  Utils.cpp  Utils.hpp
marker-detector/cuda/src/: Board.hpp  Main.cpp  Position.hpp
marker-detector/src/: Board.cpp  Board.hpp  Constants.hpp  ConvolutionFilter.cpp  ConvolutionFilter.hpp  DataSerializer.cpp  DataSerializer.hpp  DetectionFilter.cpp  DetectionFilter.hpp  InputFilter.cpp  Main.cpp  MqttClient.cpp  MqttClient.hpp  Position.cpp  Position.hpp  Train.cpp  Train.hpp  Utils.cpp  Utils.hpp
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/: CMakeCache.txt  CMakeLists.txt
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/Application/: CMakeLists.txt
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/Arduino/: four_led_pwm.ino
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/ArucoGenerator/: CMakeLists.txt
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/ComputerVision/: CMakeLists.txt  input.json  input_2.json  matrices.yml  modes_without_mqtt.json  simulator_config.json
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/MonoCalibrate/: CMakeLists.txt  matrices2.yml  matrices3.yml  matrices4.yml  matrices5.yml  matrices_new.yml
src/cpp/hu.bme.mit.inf.modes3.components.computervision/src/StereoCalibrate/: CMakeLists.txt
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/: .gitignore  CMakeLists.txt  main.cpp  platformio.ini
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/lib/traindetector/: CMakeLists.txt  edgedetector.cpp  edgedetector.h  enums.h  traindetection.cpp  traindetection.h  traindetector.cpp  traindetector.h
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/src/: main.cpp
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/tests/traindetector_tests/: CMakeLists.txt
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/traindetector/: CMakeLists.txt  traindetection.cpp  traindetection.h  traindetector.cpp  traindetector.h
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/traindetector_tests/: .gitignore  CMakeLists.txt
src/cpp/hu.bme.mit.inf.modes3.components.traindetector/traindetector_tests/tests/: detection_test.cpp  distance_test.cpp
src/cpp/hu.bme.mit.inf.modes3.components.xpressnet/: CMakeLists.txt  Makefile  XpressController-codelite.mk  XpressController-codelite.txt  XpressController-codelite.workspace  main.cpp
src/cpp/hu.bme.mit.inf.modes3.components.xpressnet/.codelite/: XpressController-codelite.session  XpressController-codelite.tags  compilation.db  compile_commands.json  refactoring.db
src/cpp/hu.bme.mit.inf.modes3.components.xpressnet/GoogleProtocolBuffers/: DccOperationsCommand.pb.cc  DccOperationsCommand.pb.h  DccOperationsState.pb.cc  DccOperationsState.pb.h  Enums.pb.cc  Enums.pb.h  Message.pb.cc  Message.pb.h  SegmentCommand.pb.cc  SegmentCommand.pb.h  SegmentOccupancy.pb.cc  SegmentOccupancy.pb.h  SegmentState.pb.cc  SegmentState.pb.h  TrainCurrentSegment.pb.cc  TrainCurrentSegment.pb.h  TrainCurrentSpeed.pb.cc  TrainCurrentSpeed.pb.h  TrainFunctionCommand.pb.cc  TrainFunctionCommand.pb.h  TrainFunctionState.pb.cc  TrainFunctionState.pb.h  TrainReferenceSpeed.pb.cc  TrainReferenceSpeed.pb.h  TrainReferenceSpeedCommand.pb.cc  TrainReferenceSpeedCommand.pb.h  TurnoutCommand.pb.cc  TurnoutCommand.pb.h  TurnoutReferenceCommand.pb.cc  TurnoutReferenceCommand.pb.h  TurnoutReferenceState.pb.cc  TurnoutReferenceState.pb.h  TurnoutState.pb.cc  TurnoutState.pb.h  YakinduCanGoTo.pb.cc  YakinduCanGoTo.pb.h  YakinduCannotGoTo.pb.cc  YakinduCannotGoTo.pb.h  YakinduReleaseTo.pb.cc  YakinduReleaseTo.pb.h  (+2 more)
src/cpp/hu.bme.mit.inf.modes3.components.xpressnet/Network/: MosquittoppClient.cpp  MosquittoppClient.h  MqttClient.cpp  MqttClient.h  NetworkInterface.cpp  NetworkInterface.h
src/cpp/hu.bme.mit.inf.modes3.components.xpressnet/XpressNetSerial/: AsyncSerial.cpp  AsyncSerial.h  BoardStatus.cpp  BoardStatus.h  SerialConnection.cpp  SerialConnection.h  TrackPowerStatus.cpp  TrackPowerStatus.h  TrainStatus.cpp  TrainStatus.h  TurnoutStatus.cpp  TurnoutStatus.h  XpressNetSerial.cpp  XpressNetSerial.h
src/cpp/hu.bme.mit.inf.modes3.components.xpressnetbridge/: CMakeLists.txt  install.sh  install_dependencies.sh  main.cpp
src/cpp/hu.bme.mit.inf.modes3.components.xpressnetbridge/GoogleProtocolBuffers/: ComputerVisionObjectPositions.pb.cc  ComputerVisionObjectPositions.pb.h  DccOperationsCommand.pb.cc  DccOperationsCommand.pb.h  DccOperationsState.pb.cc  DccOperationsState.pb.h  Enums.pb.cc  Enums.pb.h  Message.pb.cc  Message.pb.h  SegmentCommand.pb.cc  SegmentCommand.pb.h  SegmentOccupancy.pb.cc  SegmentOccupancy.pb.h  SegmentState.pb.cc  SegmentState.pb.h  SendAllStatus.pb.cc  SendAllStatus.pb.h  TrainCurrentSegment.pb.cc  TrainCurrentSegment.pb.h  TrainCurrentSpeed.pb.cc  TrainCurrentSpeed.pb.h  TrainFunctionCommand.pb.cc  TrainFunctionCommand.pb.h  TrainFunctionState.pb.cc  TrainFunctionState.pb.h  TrainReferenceSpeed.pb.cc  TrainReferenceSpeed.pb.h  TrainReferenceSpeedCommand.pb.cc  TrainReferenceSpeedCommand.pb.h  TurnoutCommand.pb.cc  TurnoutCommand.pb.h  TurnoutReferenceCommand.pb.cc  TurnoutReferenceCommand.pb.h  TurnoutReferenceState.pb.cc  TurnoutReferenceState.pb.h  TurnoutState.pb.cc  TurnoutState.pb.h  YakinduCanGoTo.pb.cc  YakinduCanGoTo.pb.h  (+8 more)
src/cpp/hu.bme.mit.inf.modes3.components.xpressnetbridge/Network/: MosquittoppClient.cpp  MosquittoppClient.h  NetworkInterface.h
src/cpp/hu.bme.mit.inf.modes3.components.xpressnetbridge/XpressNetSerial/: AsyncSerial.h  TrackPowerStatus.cpp  TurnoutStatus.cpp
src/cpp/hu.bme.mit.inf.modes3.components.xpressnetbridge/cmake_modules/: FindMosquittopp.cmake
src/cpp/hu.bme.mit.inf.modes3.train_sample_generator/: CMakeLists.txt
(+4209 files in other folders)
